Fix scrollbar height

--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -13,7 +13,7 @@ nav {
 }
 
 .nav-users {
-    height: 95%;
+    height: 90%;
     width: 100%;
     overflow: auto;
 }
